Wrap search input in label to avoid duplicate aria IDs
These IDs are somewhat unavoidable due to the fact that we render
this search bar twice in different locations (mobile &
tablet/desktop header)

--- a/app/frontend/components/_search-bar.scss
+++ b/app/frontend/components/_search-bar.scss
@@ -3,6 +3,9 @@
   flex: 1;
   height: 100%;
 
+
+  label { flex: 1; }
+
   &__input {
     background: get-color(primary-x-light);
     background-image: url("images/search.svg");
